crates/fig-lexer/tests/snapshots/integration_tests__interfaces__single_method.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Interface
- Ident: Printable
- Newline
- Indent
- Func
- Ident: print
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Ident: ok
- Newline
- Dedent
